assignments/PA3/cool copy.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | class_list error ';'
    5           | error ';'

    6 class: CLASS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    8 feature_list: ε
    9             | feature_list feature ';'
   10             | feature_list error ';'

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID ASSIGN expr

   14 formal_list: ε
   15            | formal
   16            | formal_list2 formal

   17 formal_list2: formal ','
   18             | formal_list2 formal ','

   19 formal: OBJECTID ':' TYPEID

   20 expr_actuals: ε
   21             | expr
   22             | expr_actuals_list expr

   23 expr_actuals_list: expr ','
   24                  | expr_actuals_list expr ','

   25 expr_list: expr ';'
   26          | expr_list expr ';'
   27          | expr_list error ';'
   28          | error ';'

   29 let_list: OBJECTID ':' TYPEID IN expr
   30         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   31         | OBJECTID ':' TYPEID ',' let_list
   32         | OBJECTID ':' TYPEID ASSIGN expr ',' let_list
   33         | error let_list

   34 case: OBJECTID ':' TYPEID DARROW expr ';'

   35 case_list: case
   36          | case_list case

   37 expr: OBJECTID ASSIGN expr
   38     | expr '@' TYPEID '.' OBJECTID '(' expr_actuals ')'
   39     | expr '.' OBJECTID '(' expr_actuals ')'
   40     | OBJECTID '(' expr_actuals ')'
   41     | IF expr THEN expr ELSE expr FI
   42     | WHILE expr LOOP expr POOL
   43     | '{' expr_list '}'
   44     | LET let_list
   45     | CASE expr OF case_list ESAC
   46     | NEW TYPEID
   47     | ISVOID expr
   48     | expr '+' expr
   49     | expr '-' expr
   50     | expr '*' expr
   51     | expr '/' expr
   52     | '~' expr
   53     | expr '<' expr
   54     | expr LE expr
   55     | expr '=' expr
   56     | NOT expr
   57     | '(' expr ')'
   58     | OBJECTID
   59     | INT_CONST
   60     | STR_CONST
   61     | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 38 39 40 57
    ')' (41) 11 38 39 40 57
    '*' (42) 50
    '+' (43) 48
    ',' (44) 17 18 23 24 31 32
    '-' (45) 49
    '.' (46) 38 39
    '/' (47) 51
    ':' (58) 11 12 13 19 29 30 31 32 34
    ';' (59) 4 5 6 7 9 10 25 26 27 28 34
    '<' (60) 53
    '=' (61) 55
    '@' (64) 38
    '{' (123) 6 7 11 43
    '}' (125) 6 7 11 43
    '~' (126) 52
    error (256) 4 5 10 27 28 33
    CLASS (258) 6 7
    ELSE (259) 41
    FI (260) 41
    IF (261) 41
    IN (262) 29 30
    INHERITS (263) 7
    LET (264) 44
    LOOP (265) 42
    POOL (266) 42
    THEN (267) 41
    WHILE (268) 42
    CASE (269) 45
    ESAC (270) 45
    OF (271) 45
    DARROW (272) 34
    NEW (273) 46
    ISVOID (274) 47
    STR_CONST <symbol> (275) 60
    INT_CONST <symbol> (276) 59
    BOOL_CONST <boolean> (277) 61
    TYPEID <symbol> (278) 6 7 11 12 13 19 29 30 31 32 34 38 46
    OBJECTID <symbol> (279) 11 12 13 19 29 30 31 32 34 37 38 39 40 58
    ASSIGN (280) 13 30 32 37
    NOT (281) 56
    LE (282) 54
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3 4 5
        on right: 1 3 4
    class <class_> (48)
        on left: 6 7
        on right: 2 3
    feature_list <features> (49)
        on left: 8 9 10
        on right: 6 7 9 10
    feature <feature> (50)
        on left: 11 12 13
        on right: 9
    formal_list <formals> (51)
        on left: 14 15 16
        on right: 11
    formal_list2 <formals> (52)
        on left: 17 18
        on right: 16 18
    formal <formal> (53)
        on left: 19
        on right: 15 16 17 18
    expr_actuals <expressions> (54)
        on left: 20 21 22
        on right: 38 39 40
    expr_actuals_list <expressions> (55)
        on left: 23 24
        on right: 22 24
    expr_list <expressions> (56)
        on left: 25 26 27 28
        on right: 26 27 43
    let_list <expression> (57)
        on left: 29 30 31 32 33
        on right: 31 32 33 44
    case <case_> (58)
        on left: 34
        on right: 35 36
    case_list <cases> (59)
        on left: 35 36
        on right: 36 45
    expr <expression> (60)
        on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
        on right: 11 13 21 22 23 24 25 26 29 30 32 34 37 38 39 41 42 45 47 48 49 50 51 52 53 54 55 56 57


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    5 class_list: error • ';'

    ';'  shift, and go to state 6


State 2

    6 class: CLASS • TYPEID '{' feature_list '}' ';'
    7      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program • $end

    $end  shift, and go to state 8


State 4

    1 program: class_list •
    3 class_list: class_list • class
    4           | class_list • error ';'

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


State 5

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 6

    5 class_list: error ';' •

    $default  reduce using rule 5 (class_list)


State 7

    6 class: CLASS TYPEID • '{' feature_list '}' ';'
    7      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


State 8

    0 $accept: program $end •

    $default  accept


State 9

    4 class_list: class_list error • ';'

    ';'  shift, and go to state 13


State 10

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 11

    7 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 14


State 12

    6 class: CLASS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 15


State 13

    4 class_list: class_list error ';' •

    $default  reduce using rule 4 (class_list)


State 14

    7 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  shift, and go to state 16


State 15

    6 class: CLASS TYPEID '{' feature_list • '}' ';'
    9 feature_list: feature_list • feature ';'
   10             | feature_list • error ';'

    error     shift, and go to state 17
    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 19

    feature  go to state 20


State 16

    7 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 21


State 17

   10 feature_list: feature_list error • ';'

    ';'  shift, and go to state 22


State 18

   11 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID • ':' TYPEID
   13        | OBJECTID • ':' TYPEID ASSIGN expr

    '('  shift, and go to state 23
    ':'  shift, and go to state 24


State 19

    6 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 25


State 20

    9 feature_list: feature_list feature • ';'

    ';'  shift, and go to state 26


State 21

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
    9 feature_list: feature_list • feature ';'
   10             | feature_list • error ';'

    error     shift, and go to state 17
    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 27

    feature  go to state 20


State 22

   10 feature_list: feature_list error ';' •

    $default  reduce using rule 10 (feature_list)


State 23

   11 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 28

    $default  reduce using rule 14 (formal_list)

    formal_list   go to state 29
    formal_list2  go to state 30
    formal        go to state 31


State 24

   12 feature: OBJECTID ':' • TYPEID
   13        | OBJECTID ':' • TYPEID ASSIGN expr

    TYPEID  shift, and go to state 32


State 25

    6 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 6 (class)


State 26

    9 feature_list: feature_list feature ';' •

    $default  reduce using rule 9 (feature_list)


State 27

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 33


State 28

   19 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 34


State 29

   11 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expr '}'

    ')'  shift, and go to state 35


State 30

   16 formal_list: formal_list2 • formal
   18 formal_list2: formal_list2 • formal ','

    OBJECTID  shift, and go to state 28

    formal  go to state 36


State 31

   15 formal_list: formal •
   17 formal_list2: formal • ','

    ','  shift, and go to state 37

    $default  reduce using rule 15 (formal_list)


State 32

   12 feature: OBJECTID ':' TYPEID •
   13        | OBJECTID ':' TYPEID • ASSIGN expr

    ASSIGN  shift, and go to state 38

    $default  reduce using rule 12 (feature)


State 33

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 7 (class)


State 34

   19 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 39


State 35

   11 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 40


State 36

   16 formal_list: formal_list2 formal •
   18 formal_list2: formal_list2 formal • ','

    ','  shift, and go to state 41

    $default  reduce using rule 16 (formal_list)


State 37

   17 formal_list2: formal ',' •

    $default  reduce using rule 17 (formal_list2)


State 38

   13 feature: OBJECTID ':' TYPEID ASSIGN • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 56


State 39

   19 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 19 (formal)


State 40

   11 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expr '}'

    TYPEID  shift, and go to state 57


State 41

   18 formal_list2: formal_list2 formal ',' •

    $default  reduce using rule 18 (formal_list2)


State 42

   41 expr: IF • expr THEN expr ELSE expr FI

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 58


State 43

   44 expr: LET • let_list

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60

    let_list  go to state 61


State 44

   42 expr: WHILE • expr LOOP expr POOL

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 62


State 45

   45 expr: CASE • expr OF case_list ESAC

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 63


State 46

   46 expr: NEW • TYPEID

    TYPEID  shift, and go to state 64


State 47

   47 expr: ISVOID • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 65


State 48

   60 expr: STR_CONST •

    $default  reduce using rule 60 (expr)


State 49

   59 expr: INT_CONST •

    $default  reduce using rule 59 (expr)


State 50

   61 expr: BOOL_CONST •

    $default  reduce using rule 61 (expr)


State 51

   37 expr: OBJECTID • ASSIGN expr
   40     | OBJECTID • '(' expr_actuals ')'
   58     | OBJECTID •

    ASSIGN  shift, and go to state 66
    '('     shift, and go to state 67

    $default  reduce using rule 58 (expr)


State 52

   56 expr: NOT • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 68


State 53

   52 expr: '~' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 69


State 54

   43 expr: '{' • expr_list '}'

    error       shift, and go to state 70
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr_list  go to state 71
    expr       go to state 72


State 55

   57 expr: '(' • expr ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 73


State 56

   13 feature: OBJECTID ':' TYPEID ASSIGN expr •
   38 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_actuals ')'
   39     | expr • '.' OBJECTID '(' expr_actuals ')'
   48     | expr • '+' expr
   49     | expr • '-' expr
   50     | expr • '*' expr
   51     | expr • '/' expr
   53     | expr • '<' expr
   54     | expr • LE expr
   55     | expr • '=' expr

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 13 (feature)


State 57

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expr '}'

    '{'  shift, and go to state 83


State 58

   38 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_actuals ')'
   39     | expr • '.' OBJECTID '(' expr_actuals ')'
   41     | IF expr • THEN expr ELSE expr FI
   48     | expr • '+' expr
   49     | expr • '-' expr
   50     | expr • '*' expr
   51     | expr • '/' expr
   53     | expr • '<' expr
   54     | expr • LE expr
   55     | expr • '=' expr

    THEN  shift, and go to state 84
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 59

   33 let_list: error • let_list

    error     shift, and go to state 59
    OBJECTID  shift, and go to state 60

    let_list  go to state 85


State 60

   29 let_list: OBJECTID • ':' TYPEID IN expr
   30         | OBJECTID • ':' TYPEID ASSIGN expr IN expr
   31         | OBJECTID • ':' TYPEID ',' let_list
   32         | OBJECTID • ':' TYPEID ASSIGN expr ',' let_list

    ':'  shift, and go to state 86


State 61

   44 expr: LET let_list •

    $default  reduce using rule 44 (expr)


State 62

   38 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_actuals ')'
   39     | expr • '.' OBJECTID '(' expr_actuals ')'
   42     | WHILE expr • LOOP expr POOL
   48     | expr • '+' expr
   49     | expr • '-' expr
   50     | expr • '*' expr
   51     | expr • '/' expr
   53     | expr • '<' expr
   54     | expr • LE expr
   55     | expr • '=' expr

    LOOP  shift, and go to state 87
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 63

   38 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_actuals ')'
   39     | expr • '.' OBJECTID '(' expr_actuals ')'
   45     | CASE expr • OF case_list ESAC
   48     | expr • '+' expr
   49     | expr • '-' expr
   50     | expr • '*' expr
   51     | expr • '/' expr
   53     | expr • '<' expr
   54     | expr • LE expr
   55     | expr • '=' expr

    OF   shift, and go to state 88
    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82


State 64

   46 expr: NEW TYPEID •

    $default  reduce using rule 46 (expr)


State 65

   38 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_actuals ')'
   39     | expr • '.' OBJECTID '(' expr_actuals ')'
   47     | ISVOID expr •
   48     | expr • '+' expr
   49     | expr • '-' expr
   50     | expr • '*' expr
   51     | expr • '/' expr
   53     | expr • '<' expr
   54     | expr • LE expr
   55     | expr • '=' expr

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 47 (expr)


State 66

   37 expr: OBJECTID ASSIGN • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 89


State 67

   40 expr: OBJECTID '(' • expr_actuals ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    $default  reduce using rule 20 (expr_actuals)

    expr_actuals       go to state 90
    expr_actuals_list  go to state 91
    expr               go to state 92


State 68

   38 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_actuals ')'
   39     | expr • '.' OBJECTID '(' expr_actuals ')'
   48     | expr • '+' expr
   49     | expr • '-' expr
   50     | expr • '*' expr
   51     | expr • '/' expr
   53     | expr • '<' expr
   54     | expr • LE expr
   55     | expr • '=' expr
   56     | NOT expr •

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 56 (expr)


State 69

   38 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_actuals ')'
   39     | expr • '.' OBJECTID '(' expr_actuals ')'
   48     | expr • '+' expr
   49     | expr • '-' expr
   50     | expr • '*' expr
   51     | expr • '/' expr
   52     | '~' expr •
   53     | expr • '<' expr
   54     | expr • LE expr
   55     | expr • '=' expr

    '@'  shift, and go to state 81
    '.'  shift, and go to state 82

    $default  reduce using rule 52 (expr)


State 70

   28 expr_list: error • ';'

    ';'  shift, and go to state 93


State 71

   26 expr_list: expr_list • expr ';'
   27          | expr_list • error ';'
   43 expr: '{' expr_list • '}'

    error       shift, and go to state 94
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '}'         shift, and go to state 95
    '('         shift, and go to state 55

    expr  go to state 96


State 72

   25 expr_list: expr • ';'
   38 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_actuals ')'
   39     | expr • '.' OBJECTID '(' expr_actuals ')'
   48     | expr • '+' expr
   49     | expr • '-' expr
   50     | expr • '*' expr
   51     | expr • '/' expr
   53     | expr • '<' expr
   54     | expr • LE expr
   55     | expr • '=' expr

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 97


State 73

   38 expr: expr • '@' TYPEID '.' OBJECTID '(' expr_actuals ')'
   39     | expr • '.' OBJECTID '(' expr_actuals ')'
   48     | expr • '+' expr
   49     | expr • '-' expr
   50     | expr • '*' expr
   51     | expr • '/' expr
   53     | expr • '<' expr
   54     | expr • LE expr
   55     | expr • '=' expr
   57     | '(' expr • ')'

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ')'  shift, and go to state 98


State 74

   54 expr: expr LE • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 99


State 75

   53 expr: expr '<' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 100


State 76

   55 expr: expr '=' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 101


State 77

   48 expr: expr '+' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 102


State 78

   49 expr: expr '-' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 103


State 79

   50 expr: expr '*' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 104


State 80

   51 expr: expr '/' • expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 105


State 81

   38 expr: expr '@' • TYPEID '.' OBJECTID '(' expr_actuals ')'

    TYPEID  shift, and go to state 106


State 82

   39 expr: expr '.' • OBJECTID '(' expr_actuals ')'

    OBJECTID  shift, and go to state 107


State 83

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' • expr '}'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 108


State 84

   41 expr: IF expr THEN • expr ELSE expr FI

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 109


State 85

   33 let_list: error let_list •

    $default  reduce using rule 33 (let_list)


State 86

   29 let_list: OBJECTID ':' • TYPEID IN expr
   30         | OBJECTID ':' • TYPEID ASSIGN expr IN expr
   31         | OBJECTID ':' • TYPEID ',' let_list
   32         | OBJECTID ':' • TYPEID ASSIGN expr ',' let_list

    TYPEID  shift, and go to state 110


State 87

   42 expr: WHILE expr LOOP • expr POOL

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 111


State 88

   45 expr: CASE expr OF • case_list ESAC

    OBJECTID  shift, and go to state 112

    case       go to state 113
    case_list  go to state 114


State 89
